# ARK-Navigator

./: .editorconfig  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  LICENSE  README.md  build.gradle  gradle.properties  settings.gradle  testRelease.jks
.github/: pull_request_template.md
.github/workflows/: build.yml  ktlintCheck.yml  release.yml  rust.yml  sonar_analysis.yml
app/: build.gradle  proguard-rules.pro
app-scripts/: pre-commit-macos
app/app-scripts/: pre-commit-linux  pre-commit-unix  pre-commit-windows
app/libs/: arkfilepicker-release.aar
app/src/main/: AndroidManifest.xml
app/src/main/assets/: folders_empty_folder_list_hint_gif.json
app/src/main/res/anim/: bottom_fade_scale_in.xml  bottom_fade_scale_out.xml  fade_in.xml  fade_out.xml
app/src/main/res/color/: bottom_navigation_item.xml
app/src/main/res/drawable/: bg_dialog_rounded_16dp.xml  bg_rounded_6_top.xml  bg_rounded_8_stroke.xml  bg_rounded_black_transparent.xml  bg_rounded_black_transparent_small.xml  bg_rounded_top_24dp.xml  ic_arrow_down.xml  ic_arrow_up.xml  ic_baseline_add.xml  ic_baseline_delete_24.xml  ic_baseline_folder.xml  ic_baseline_info.xml  ic_cloud_off.xml  ic_dice.xml  ic_file.xml  ic_file_3gp.xml  ic_file_avi.xml  ic_file_bmp.xml  ic_file_doc.xml  ic_file_docx.xml  ic_file_flac.xml  ic_file_flv.xml  ic_file_gif.xml  ic_file_html.xml  ic_file_jpeg.xml  ic_file_jpg.xml  ic_file_mkv.xml  ic_file_mov.xml  ic_file_mp3.xml  (+36 more)
app/src/main/res/drawable-v24/: ic_baseline_share.xml
arklib/: Cargo.toml
arklib/src/: lib.rs
gradle/wrapper/: gradle-wrapper.properties
(+662 files in other folders)
