[package]
name = "arkutils"
version = "0.1.0"
edition = "2021"


[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.19.0", default-features = false }
android_logger = "0.10.1"

[lib]
name = "arkutils"
crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
crc32fast = "1.3.0"
env_logger = "0.9.0"
jni = "0.19.0"
